--- a/contact_style.css
+++ b/contact_style.css
@@ -30,26 +30,23 @@
 }
 
 .cont2_contact {
-    
-    /* flex:2; */
-    
-    /* background-image: url("file:///C:/Users/99506/Desktop/1f11f341d2efa579910daacc3022692.png");
-    background-size: cover; */
-    /* opacity: 0.5; */
+
+    /* background-color: #f1f1f1;
+    left: 50%;
+    height: 100%; 
+    position: fixed; */
+
     background-color: #f1f1f1;
     
     /* box-sizing: border-box; */
-    /* margin-left: 440px; */
-    left: 50%;
-    /* padding: 20px; */
-    height: 100%; 
-    /* flex-direction: column;
+    margin-left: 440px;
+    padding-left: 20px;
+    padding-right:20px;
+    padding-bottom: 20px;
+    padding-top: 190px;
     display: flex;
-    justify-content: flex-end; 
-    align-items: center;
-    font-family: adobe-garamond-pro, serif;
-    font-size: large; */
-    position: fixed;
+    flex-direction: column;
+    flex-wrap: wrap;
 
     
 }
@@ -58,7 +55,7 @@
     font-family: adobe-garamond-pro, serif;
     font-weight: 600;
     font-style: normal;
-    padding-top: 190px;
+    /* padding-top: 190px; */
     line-height: 30px; 
 
 }
@@ -75,7 +72,8 @@
     height: 100%; /* 图片的高度为整个网页的高度 */
     width: auto; /* 图片的宽度自适应 */
 
-  }
+}
+
 
 #contact-image {
     padding-top: 60px;
