--- a/pro_style.css
+++ b/pro_style.css
@@ -35,7 +35,7 @@ html,body {
     width: 100%;
     height: 100%;
     /* position: fixed; */
-    background-color: red;
+    background-color: #f1f1f1;
 }
 
 .cont1_project {
