--- a/gal_style.css
+++ b/gal_style.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     /* position: fixed; */
-    background-color: red;
+    background-color: #f1f1f1;
 }
 
 .cont1_gal {
