--- a/blog_style.css
+++ b/blog_style.css
@@ -3,6 +3,14 @@
     margin:0px;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #f1f1f1;  /* 灰色背景 */
+}
+
 .mainCont_blog{
     /* display: flex;
     flex-direction: row; */
@@ -183,4 +191,28 @@ html,body {
     height: 100%;
     width: 100%;
 }
+
+
+
+.exhibitions {
+    list-style: none; /* 移除列表前的符号 */
+    padding-left: 0; /* 移除列表默认的内边距 */
+}
+
+.exhibitions .year {
+    display: inline-block; /* 使年份和展览信息在同一行显示 */
+    width: 50px; /* 为年份设置宽度 */
+    margin-right: 10px; /* 在年份和展览信息之间添加空间 */
+    font-weight: bold; /* 粗体显示年份 */
+}
+
+.exhibitions .exhibition-info {
+    display: inline; /* 保证展览信息在年份后面显示 */
+    text-indent: 0; /* 移除文本缩进 */
+}
+
+
+
+
+
 
