--- a/gal_style.css
+++ b/gal_style.css
@@ -3,6 +3,14 @@
     margin:0px;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #f1f1f1;  /* 灰色背景 */
+}
+
 .mainCont_gal{
     /* display: flex;
     flex-direction: row; */
