--- a/index_style.css
+++ b/index_style.css
@@ -41,6 +41,14 @@
     
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #f1f1f1;  /* 灰色背景 */
+}
+
 /* .intro_text{
     font-family: italic;
     font-style: normal;
