--- a/pro_style.css
+++ b/pro_style.css
@@ -5,7 +5,13 @@
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
-
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #f1f1f1;  /* 灰色背景 */
+}
 
 
 
