--- a/blog_style.css
+++ b/blog_style.css
@@ -98,17 +98,19 @@ html, body {
 }
 
 .blog-date {
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: #888;
-    font-weight: 400;
+    font-weight: 600;
     font-style: normal;
+    margin-left: 12px;
 }
 
 .blog-title {
     margin: 0.2rem 0 1rem 0;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 600;
     line-height: 1.3;
+    
 }
 
 .blog-title a {
@@ -125,7 +127,7 @@ html, body {
     font-size: 0.95rem;
     line-height: 1.5;
     color: #666;
-    font-weight: 400;
+    font-weight: 600;
     margin: 0;
     max-width: 600px;
     font-style: normal;
